--- a/carrinho/carrinho.css
+++ b/carrinho/carrinho.css
@@ -10,8 +10,9 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background-color: #f9f5f1;
   color: #3e2723;
-  flex-direction: row;
-  min-height: 10vh;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 header {
@@ -44,9 +45,9 @@ footer {
 }
 
 .item-carrinho {
-  background-color: #d2c0b7;
+  background-color: #efebe9;
   border: 1px solid #d7ccc8;
-  border-left: 10px solid #8d6e63;
+  border-left: 5px solid #8d6e63;
   padding: 20px;
   margin-bottom: 20px;
   border-radius: 6px;
@@ -70,7 +71,7 @@ input[type="number"] {
   padding: 6px;
   border: 1px solid #bcaaa4;
   border-radius: 4px;
-  background-color: #927165cd;
+  background-color: #fbe9e7;
   color: #3e2723;
 }
 
